# instrMCP

./: .env.example  .gitignore  .mcp.json  <MagicMock name='Path().__truediv__().__truediv__()' id='4435267088'>  BUGS_TO_FIX.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  MeasureItExample.ipynb  README.md  TODO.md  TODO_detailed_tool.md  TOOL_AUDIT_REPORT.md  TestNotebook.ipynb  Untitled4.ipynb  agents.md  claude_desktop_config.json  coverage.xml  plan.md  pyproject.toml  requirements.txt  tool_metadata_plan.md
.claude/commands/: test_helper.md
.github/workflows/: lint.yml  tests.yml
agent_TODO_history/: Human_test.md  Human_test_Jan11.md  SAFETY_Jan8.md  human_safety_test_Jan8.md  human_test_plan_cell_targeting_jan16.md  human_test_plan_consolidated_jan18.md  human_test_plan_jan14_update.md  testplanJan11.md  tool_metadata_plan.md
agent_TODO_histrory/: TODO.md
agentsetting/claudedesktopsetting/: CLAUDE_DESKTOP_SETUP.md  README.md  claude_desktop_config.json  setup_claude.sh
agentsetting/codexsetting/: README.md  codex.mcp.toml
agentsetting/geminisetting/: README.md  settings.json
claudedesktopsetting/: CLAUDE_DESKTOP_SETUP.md  README.md  claude_launcher.py  setup_claude.sh
codexsetting/: README.md  codex.mcp.toml  codex_launcher.py
config/: station.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DYNAMIC_TOOLS.md  DYNAMIC_TOOLS_QUICKSTART.md  E2E_TEST_PLAN.md  TROUBLESHOOTING.md  requirements.txt
docs/source/: architecture.rst  changelog.rst  conf.py  contributing.rst  database_integration.rst  index.rst  installation.rst  jupyter_integration.rst  license.rst  mcp_tools.rst  measureit_integration.rst  quickstart.rst
docs/source/api/: cli.rst  extensions.rst  index.rst  servers.rst  tools.rst  utils.rst
extension_examples/: databaseExample.ipynb  measureitExample.ipynb
instrmcp/: README.md  __init__.py  cli.py  logging_config.py  setup_utils.py
instrmcp/app/: __init__.py  api.py  cli_app.py  components.py  doctor.py  inspector.py  install_kernel.py  launcher.py  logs.py  mcp_client.py  profiles.py  runfile.py  streamlit_app.py  supervisor.py
instrmcp/app/defaults/: default_profile.yaml  demo.yaml
instrmcp/app/webapp/: app.js  index.html  style.css
instrmcp/config/: __init__.py  metadata_baseline.yaml
instrmcp/extensions/: __init__.py
instrmcp/extensions/MeasureIt/: __init__.py  measureit_templates.py
instrmcp/extensions/database/: __init__.py  db_resources.py  query_tools.py
instrmcp/extensions/dynamic_tool/: __init__.py
instrmcp/servers/: __init__.py
instrmcp/tools/: __init__.py  stdio_proxy.py
instrmcp/utils/: __init__.py  mcptool_logger.py  metadata_config.py  stdio_proxy.py
qdevBench/tests/: data_loader.py
servers/: __init__.py
servers/jupyter_qcodes/: DEBUG.md  UPDATE_CELL_TESTING.md  __init__.py  active_cell_bridge.py  cache.py  claude_launcher.py  example_usage.py  jupyter_mcp_extension.py  mcp_server.py  run_standalone.py  test_update_cell.py  tools.py
servers/labassist/: __init__.py
servers/qcodes/: requirements.txt
servers/redpitaya/: __init__.py
state/: available_instr.json
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_config.py  test_station_init.py
tests/e2e/: README.md  __init__.py  conftest.py  plan.md  test_01_server_lifecycle.py  test_02_safe_mode_tools.py  test_03_unsafe_mode_tools.py  test_04_dangerous_mode.py  test_05_security_scanner.py  test_06_optional_features.py  test_07_frontend_widget.py  test_08_cell_targeting.py  test_09_consent_dialogs.py  test_10_edge_cases.py  test_11_database_path_resolution.py  test_12_kernel_state.py  test_13_bridge_resilience.py
tests/fixtures/: mock_instruments.py  mock_ipython.py  sample_databases.py  sample_notebooks.py
tests/playwright/: README.md  __init__.py  mcp_metadata_client.py  metadata_snapshot.json  metadata_snapshot_user.json  run_metadata_e2e.py  test_metadata_consistency.py  test_stdio_metadata_consistency.py  test_stdio_proxy_metadata.py
tests/unit/: test_api.py  test_cache.py  test_doctor.py  test_inspector.py  test_mcp_client.py  test_metadata_config.py  test_profiles.py  test_qcodes_compat.py  test_stdio_proxy.py  test_supervisor.py
tools/: __init__.py  context7_client.py  token_count.py  version.py
(+187 files in other folders)
